frag/tests/ill-typed/T0.hs
module Main where

SMOKE TEST FOR TEST HARNESS

THIS MUST NOT TYPECHECK
